[gd_scene load_steps=10 format=3 uid="uid://d07ajsqeub6yu"]

[ext_resource type="Texture2D" uid="uid://u8yyblagvtmh" path="res://assets/aira.png" id="1_ac2hh"]
[ext_resource type="Script" uid="uid://tal18vlnpvba" path="res://Battle/battle_manager.gd" id="1_ihngk"]
[ext_resource type="Texture2D" uid="uid://ds380c0bajl08" path="res://assets/isi.png" id="2_o5tja"]
[ext_resource type="Texture2D" uid="uid://d4i5n7hyg4w5r" path="res://assets/ult.png" id="3_do635"]
[ext_resource type="Texture2D" uid="uid://8n7v6pgnnnll" path="res://assets/lilac.png" id="3_o5tja"]
[ext_resource type="Texture2D" uid="uid://cf477821xv5gl" path="res://assets/adelaide.png" id="5_do635"]
[ext_resource type="Texture2D" uid="uid://d4bmq8hquqwpy" path="res://assets/iris.png" id="6_ploow"]
[ext_resource type="Texture2D" uid="uid://elidcc7bq6fa" path="res://assets/normalattack.png" id="7_bjo3u"]
[ext_resource type="Texture2D" uid="uid://btm4c0ipxkly1" path="res://assets/skill.png" id="8_ihngk"]

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("1_ihngk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08242298, 7.0240812e-06, 0.08444584, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="BattleDisplay" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="EnemyInfo" type="HBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="EnemyName" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/EnemyInfo"]
layout_mode = 2
text = "Archmage Isi"

[node name="EnemyHPLabel" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/EnemyInfo"]
layout_mode = 2
text = "HP"

[node name="EnemyStatus" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/EnemyInfo"]
layout_mode = 2
text = "Status"

[node name="ActionZone" type="HBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay"]
layout_mode = 2

[node name="TurnOrder" type="VBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/ActionZone"]
layout_mode = 2

[node name="TurnOrderLabel" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/ActionZone/TurnOrder"]
layout_mode = 2
text = "Turn Order
"

[node name="Label" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/ActionZone/TurnOrder"]
layout_mode = 2
text = "Aira
"

[node name="Label2" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/ActionZone/TurnOrder"]
layout_mode = 2
text = "Lilac
"

[node name="Label3" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/ActionZone/TurnOrder"]
layout_mode = 2
text = "Adelaide
"

[node name="Label4" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/ActionZone/TurnOrder"]
layout_mode = 2
text = "Iris
"

[node name="Label5" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/ActionZone/TurnOrder"]
layout_mode = 2
text = "Isi
"

[node name="BattleArea" type="HBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/ActionZone"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
alignment = 1

[node name="ActiveChar" type="Button" parent="ColorRect/MarginContainer/BattleDisplay/ActionZone/BattleArea"]
layout_mode = 2
icon = ExtResource("1_ac2hh")

[node name="ActionInfo" type="VBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/ActionZone/BattleArea"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="BattleState" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/ActionZone/BattleArea/ActionInfo"]
layout_mode = 2
text = "Battle Start"
horizontal_alignment = 1

[node name="AttackHistory1" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/ActionZone/BattleArea/ActionInfo"]
layout_mode = 2
horizontal_alignment = 1

[node name="AttackHistory2" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/ActionZone/BattleArea/ActionInfo"]
layout_mode = 2
vertical_alignment = 1

[node name="Enemy" type="Button" parent="ColorRect/MarginContainer/BattleDisplay/ActionZone/BattleArea"]
layout_mode = 2
icon = ExtResource("2_o5tja")

[node name="Party" type="HBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Players" type="HBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party"]
layout_mode = 2

[node name="Player1" type="VBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players"]
layout_mode = 2

[node name="Sprite1Ult1" type="HBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player1"]
layout_mode = 2

[node name="PlayerContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player1/Sprite1Ult1"]
layout_mode = 2

[node name="CharName1" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player1/Sprite1Ult1/PlayerContainer"]
layout_mode = 2
text = "Aira"

[node name="Sprite1" type="TextureButton" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player1/Sprite1Ult1/PlayerContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("1_ac2hh")
ignore_texture_size = true
stretch_mode = 5

[node name="UltContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player1/Sprite1Ult1"]
layout_mode = 2

[node name="Ult1" type="TextureButton" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player1/Sprite1Ult1/UltContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("3_do635")
ignore_texture_size = true
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player1/Sprite1Ult1/UltContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
color = Color(0, 0, 0, 0)

[node name="HPInfo" type="HBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player1"]
layout_mode = 2

[node name="Player1HP" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player1/HPInfo"]
layout_mode = 2
text = "HP
"

[node name="Player1HPValue" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player1/HPInfo"]
layout_mode = 2
text = "100
"

[node name="Player2" type="VBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players"]
layout_mode = 2

[node name="Sprite1Ult1" type="HBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player2"]
layout_mode = 2

[node name="PlayerContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player2/Sprite1Ult1"]
layout_mode = 2

[node name="CharName1" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player2/Sprite1Ult1/PlayerContainer"]
layout_mode = 2
text = "Iris"

[node name="Sprite1" type="TextureButton" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player2/Sprite1Ult1/PlayerContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("6_ploow")
ignore_texture_size = true
stretch_mode = 5

[node name="UltContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player2/Sprite1Ult1"]
layout_mode = 2

[node name="Ult1" type="TextureButton" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player2/Sprite1Ult1/UltContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("3_do635")
ignore_texture_size = true
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player2/Sprite1Ult1/UltContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
color = Color(0, 0, 0, 0)

[node name="HPInfo" type="HBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player2"]
layout_mode = 2

[node name="Player1HP" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player2/HPInfo"]
layout_mode = 2
text = "HP
"

[node name="Player1HPValue" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player2/HPInfo"]
layout_mode = 2
text = "100
"

[node name="Player3" type="VBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players"]
layout_mode = 2

[node name="Sprite1Ult1" type="HBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player3"]
layout_mode = 2

[node name="PlayerContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player3/Sprite1Ult1"]
layout_mode = 2

[node name="CharName1" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player3/Sprite1Ult1/PlayerContainer"]
layout_mode = 2
text = "Lilac"

[node name="Sprite1" type="TextureButton" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player3/Sprite1Ult1/PlayerContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("3_o5tja")
ignore_texture_size = true
stretch_mode = 5

[node name="UltContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player3/Sprite1Ult1"]
layout_mode = 2

[node name="Ult1" type="TextureButton" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player3/Sprite1Ult1/UltContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("3_do635")
ignore_texture_size = true
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player3/Sprite1Ult1/UltContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
color = Color(0, 0, 0, 0)

[node name="HPInfo" type="HBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player3"]
layout_mode = 2

[node name="Player1HP" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player3/HPInfo"]
layout_mode = 2
text = "HP
"

[node name="Player1HPValue" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player3/HPInfo"]
layout_mode = 2
text = "100
"

[node name="Player4" type="VBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players"]
layout_mode = 2

[node name="Sprite1Ult1" type="HBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player4"]
layout_mode = 2

[node name="PlayerContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player4/Sprite1Ult1"]
layout_mode = 2

[node name="CharName1" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player4/Sprite1Ult1/PlayerContainer"]
layout_mode = 2
text = "Adelaide"

[node name="Sprite1" type="TextureButton" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player4/Sprite1Ult1/PlayerContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("5_do635")
ignore_texture_size = true
stretch_mode = 5

[node name="UltContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player4/Sprite1Ult1"]
layout_mode = 2

[node name="Ult1" type="TextureButton" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player4/Sprite1Ult1/UltContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("3_do635")
ignore_texture_size = true
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player4/Sprite1Ult1/UltContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
color = Color(0, 0, 0, 0)

[node name="HPInfo" type="HBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player4"]
layout_mode = 2

[node name="Player1HP" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player4/HPInfo"]
layout_mode = 2
text = "HP
"

[node name="Player1HPValue" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/Party/Players/Player4/HPInfo"]
layout_mode = 2
text = "100
"

[node name="AttackButtons" type="VBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party"]
layout_mode = 2

[node name="AttackContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/AttackButtons"]
layout_mode = 2

[node name="NormalAttack" type="TextureButton" parent="ColorRect/MarginContainer/BattleDisplay/Party/AttackButtons/AttackContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("7_bjo3u")
ignore_texture_size = true
stretch_mode = 5

[node name="SkillContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/AttackButtons/AttackContainer"]
layout_mode = 2

[node name="Skill" type="TextureButton" parent="ColorRect/MarginContainer/BattleDisplay/Party/AttackButtons/AttackContainer/SkillContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("8_ihngk")
ignore_texture_size = true
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/BattleDisplay/Party/AttackButtons/AttackContainer/SkillContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
color = Color(0, 0, 0, 0)

[node name="StaminaInfo" type="HBoxContainer" parent="ColorRect/MarginContainer/BattleDisplay/Party/AttackButtons"]
layout_mode = 2
alignment = 2

[node name="StaminaLabel" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/Party/AttackButtons/StaminaInfo"]
layout_mode = 2
text = "STA"

[node name="StaminaValue" type="Label" parent="ColorRect/MarginContainer/BattleDisplay/Party/AttackButtons/StaminaInfo"]
layout_mode = 2
text = "5"

[node name="ActiveCharPosition" type="Marker2D" parent="."]
position = Vector2(260, 276)

[node name="EnemyCharPosition" type="Marker2D" parent="."]
position = Vector2(979, 254)

[connection signal="pressed" from="ColorRect/MarginContainer/BattleDisplay/Party/AttackButtons/AttackContainer/NormalAttack" to="BattleManager" method="_on_normal_attack_pressed"]
